# nmed2024

./: .gitattributes  .gitignore  add_id_column.py  create_brats_csv.py  fix_filename_paths.py  fix_training_data.py  generate_synthetic_training_data.py  pyproject.toml  remove_subject_id.py  requirements.txt  training_log.txt
MRI_emb/: BraTS20_Training_001_t1ce.npy  BraTS20_Training_002_t1ce.npy  BraTS20_Training_003_t1ce.npy  BraTS20_Training_004_t1ce.npy  BraTS20_Training_005_t1ce.npy  BraTS20_Training_006_t1ce.npy  BraTS20_Training_007_t1ce.npy  BraTS20_Training_008_t1ce.npy  BraTS20_Training_009_t1ce.npy  BraTS20_Training_010_t1ce.npy  BraTS20_Training_011_t1ce.npy  BraTS20_Training_012_t1ce.npy  BraTS20_Training_013_t1ce.npy  BraTS20_Training_014_t1ce.npy  BraTS20_Training_015_t1ce.npy  BraTS20_Training_016_t1ce.npy  BraTS20_Training_017_t1ce.npy  BraTS20_Training_018_t1ce.npy  BraTS20_Training_019_t1ce.npy  BraTS20_Training_020_t1ce.npy  BraTS20_Training_021_t1ce.npy  BraTS20_Training_022_t1ce.npy  BraTS20_Training_023_t1ce.npy  BraTS20_Training_024_t1ce.npy  BraTS20_Training_025_t1ce.npy  BraTS20_Training_026_t1ce.npy  BraTS20_Training_027_t1ce.npy  BraTS20_Training_028_t1ce.npy  BraTS20_Training_029_t1ce.npy  BraTS20_Training_030_t1ce.npy  BraTS20_Training_031_t1ce.npy  BraTS20_Training_032_t1ce.npy  BraTS20_Training_033_t1ce.npy  BraTS20_Training_034_t1ce.npy  BraTS20_Training_035_t1ce.npy  BraTS20_Training_036_t1ce.npy  BraTS20_Training_037_t1ce.npy  BraTS20_Training_039_t1ce.npy  BraTS20_Training_040_t1ce.npy  BraTS20_Training_041_t1ce.npy  (+216 more)
adrd/model/: adrd_model.py
adrd/nn/: img_model_wrapper.py
dev/: generate_predictions.py  train.sh
dev/data/: dataset_csv.py
dev/data/MRI_load/: imgdataload.py  load_mris.py
dev/data/toml_files/: default_conf_new.toml
dev/ssl_mri/: main_swinunetr.py
dev/ssl_mri/data/: mri_dataset.py
dev/ssl_mri/losses/: SwinUNETR_loss.py
dev/ssl_mri/models/: DeIT.py  ssl_head.py
dev/ssl_mri/scripts/: run_swinunetr.sh
dev/ssl_mri/utils/: data_utils.py
model_predictions/: prediction_results_prob.csv
(+1 files in other folders)
