# pyproject.toml

[project]
name = "my-cuda118-project"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    # PyTorch dependencies (source is configured below in [tool.uv.sources])
    "torch",
    "torchvision",
    "torchaudio",

    # Core ML & Medical Imaging
    "monai>=1.1",
    "torchio>=0.15",
    "scikit-learn>=1.2.2",
    "shap>=0.43",

    # Data Handling & Scientific Computing
    "numpy>=1.24",
    "pandas>=1.5.3",
    "scipy>=1.10",
    "nibabel>=5.0",

    # Utilities & Others
    "icecream",
    "tqdm>=4.62",
    "wandb",
    "matplotlib>=3.7.2",
]

# --- UV Configuration for CUDA 11.8 ---

# Rule: Where to find specific packages
[tool.uv.sources]
torch = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

# Definition: The special PyTorch warehouse
[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true